--- a/app/src/main/res/layout/activity_result_buck.xml
+++ b/app/src/main/res/layout/activity_result_buck.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
+    tools:context=".resultBuck">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
-    android:orientation="vertical"
-    tools:context=".resultBuck">
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/btna"
@@ -43,3 +49,4 @@
         android:text="All in one" />
 
 </LinearLayout>
+</ScrollView>
