--- a/app/src/main/res/layout/activity_buckconverter.xml
+++ b/app/src/main/res/layout/activity_buckconverter.xml
@@ -33,6 +33,16 @@
                 android:textStyle="bold"
                 android:text="Buck Converter"/>
 
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/knowMoreBuck"
+                android:text="What is Buck Converter ?"
+                android:paddingVertical="7dp"
+                android:layout_gravity="center"
+                android:backgroundTint="@color/teal_700"
+                />
+
             <ImageView
                 android:layout_width="fill_parent"
                 android:layout_height="300dp"
@@ -44,7 +54,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Voltage"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:textColor="@color/black"
                 android:textSize="21dp"/>
 
@@ -53,7 +63,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:hint="Enter Voltage..."/>
 
             <TextView
@@ -61,7 +71,7 @@
                 android:layout_height="wrap_content"
                 android:text="Resistance(ohm)"
                 android:textColor="@color/black"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -69,7 +79,7 @@
                 android:layout_width="match_parent"
                 android:inputType="numberDecimal"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:hint="Enter Resistance..."/>
 
             <TextView
@@ -77,7 +87,7 @@
                 android:layout_height="wrap_content"
                 android:text="Capacitance(in micro F)"
                 android:textColor="@color/black"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -85,7 +95,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:hint="Enter Capacitance..."/>
 
             <TextView
@@ -93,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:text="Inductance(in milli H)"
                 android:textColor="@color/black"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -101,7 +111,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:hint="Enter Inductance..."/>
 
             <TextView
@@ -109,7 +119,7 @@
                 android:layout_height="wrap_content"
                 android:text="T_on(in milli sec)"
                 android:textColor="@color/black"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -117,7 +127,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:hint="Enter on time period..."/>
 
             <TextView
@@ -125,7 +135,7 @@
                 android:layout_height="wrap_content"
                 android:text="T_off(in milli sec)"
                 android:textColor="@color/black"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -133,14 +143,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:hint="Enter off time period..."/>
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Initial Capacitance Voltage"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:textColor="@color/black"
                 android:textSize="21dp"/>
 
@@ -148,7 +158,7 @@
                 android:id="@+id/vc_initial"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:inputType="numberDecimal"
                 android:hint="Enter initial Capacitor Voltage"/>
 
@@ -157,7 +167,7 @@
                 android:layout_height="wrap_content"
                 android:text="Initial Inductor Current"
                 android:textColor="@color/black"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:textSize="21dp"/>
 
             <EditText
@@ -166,14 +176,14 @@
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:hint="Enter initial Inductance Current"
-                android:layout_marginLeft="5dp" />
+                android:layout_marginHorizontal="5dp" />
 
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Total time for simulation"
-                android:layout_marginLeft="5dp"
+                android:layout_marginHorizontal="5dp"
                 android:textColor="@color/black"
                 android:textSize="21dp"/>
 
@@ -183,7 +193,7 @@
                 android:layout_height="wrap_content"
                 android:inputType="numberDecimal"
                 android:hint="Enter Total Time"
-                android:layout_marginLeft="5dp"/>
+                android:layout_marginHorizontal="5dp"/>
 
 
             <Button
