--- a/app/src/main/res/layout/activity_rc_it.xml
+++ b/app/src/main/res/layout/activity_rc_it.xml
@@ -1,9 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".RcI_T">
+<RelativeLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:tools="http://schemas.android.com/tools"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".RcI_T">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<com.github.mikephil.charting.charts.LineChart
+    android:id="@+id/lineChart"
+    android:layout_margin="25dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+</com.github.mikephil.charting.charts.LineChart>
+
+<TextView
+    android:id="@+id/display"
+    android:text="I vs T"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:textColor="@color/black"
+    android:textSize="21dp"/>
+
+</RelativeLayout>
