--- a/app/src/main/res/layout/activity_buck_vc_t.xml
+++ b/app/src/main/res/layout/activity_buck_vc_t.xml
@@ -7,19 +7,45 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".BuckVc_T">
 
-<com.github.mikephil.charting.charts.LineChart
-    android:id="@+id/lineChart"
-    android:layout_margin="25dp"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-</com.github.mikephil.charting.charts.LineChart>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+android:orientation="vertical">
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="15dp"
+        android:padding="13dp"
+        android:autoSizeTextType="uniform"
+        android:background="@color/black"
+        android:fontFamily="serif"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="35dp"
+        android:textStyle="bold"
+        android:text="Buck Converter"/>
 
 <TextView
     android:id="@+id/display"
     android:text="Vc vs t"
+    android:textAlignment="center"
+    android:textStyle="bold"
+    android:padding="5dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:textColor="@color/black"
     android:textSize="21dp"/>
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/lineChart"
+            android:layout_margin="25dp"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent">
+        </com.github.mikephil.charting.charts.LineChart>
+    </LinearLayout>
 
 </RelativeLayout>
