--- a/app/src/main/res/layout/activity_result_boost.xml
+++ b/app/src/main/res/layout/activity_result_boost.xml
@@ -10,17 +10,32 @@
 <LinearLayout
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:gravity="center"
 android:orientation="vertical">
 
-<Button
-    android:id="@+id/btna"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:layout_margin="10dp"
-    android:text="Output/Capacitor Voltage vs Time" />
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="135dp"
+        android:autoSizeTextType="uniform"
+        android:background="@color/black"
+        android:fontFamily="serif"
+        android:padding="13dp"
+        android:text="Boost Converter"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="35dp"
+        android:textStyle="bold" />
 
-<Button
+    <Button
+        android:id="@+id/btna"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:text="Output/Capacitor Voltage vs Time" />
+
+    <Button
     android:id="@+id/btnb"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -46,7 +61,7 @@ android:orientation="vertical">
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
-    android:text="Line Chart 2 Demo" />
+    android:text="All in one" />
 
 </LinearLayout>
     </ScrollView>
