--- a/app/src/main/res/layout/activity_result_rc.xml
+++ b/app/src/main/res/layout/activity_result_rc.xml
@@ -3,9 +3,24 @@
 xmlns:tools="http://schemas.android.com/tools"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-android:gravity="center"
 android:orientation="vertical"
 tools:context=".resultRC">
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="175dp"
+        android:autoSizeTextType="uniform"
+        android:background="@color/black"
+        android:fontFamily="serif"
+        android:padding="13dp"
+        android:text="RC Circuit"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="35dp"
+        android:textStyle="bold" />
 
 <Button
     android:id="@+id/btna"
