--- a/app/src/main/res/layout/activity_rl_circuit.xml
+++ b/app/src/main/res/layout/activity_rl_circuit.xml
@@ -31,7 +31,7 @@ android:fillViewport="false">
             android:textColor="@color/white"
             android:textSize="35dp"
             android:textStyle="bold"
-            android:text="RLC Circuit"/>
+            android:text="RL Circuit"/>
 
         <Button
             android:layout_width="wrap_content"
