--- a/app/src/main/res/layout/activity_know_boost.xml
+++ b/app/src/main/res/layout/activity_know_boost.xml
@@ -31,7 +31,7 @@
             android:layout_height="300dp"
             android:layout_gravity="center"
             android:paddingRight="27dp"
-            android:src="@drawable/boost__1_" />
+            android:src="@drawable/boostx" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
