--- a/app/src/main/res/layout/activity_know_rc.xml
+++ b/app/src/main/res/layout/activity_know_rc.xml
@@ -30,7 +30,7 @@
             android:layout_height="300dp"
             android:layout_gravity="center"
             android:paddingRight="27dp"
-            android:src="@drawable/rc_circuit" />
+            android:src="@drawable/rc" />
 
         <TextView
             android:layout_width="match_parent"
