--- a/app/src/main/res/layout/activity_rl_circuit.xml
+++ b/app/src/main/res/layout/activity_rl_circuit.xml
@@ -48,7 +48,7 @@ android:fillViewport="false">
             android:layout_height="300dp"
             android:layout_gravity="center"
             android:paddingRight="27dp"
-            android:src="@drawable/rl_circuit_18_2_14_2" />
+            android:src="@drawable/rl" />
 
         <TextView
             android:layout_width="match_parent"
