--- a/app/src/main/res/layout/activity_boost_il_t.xml
+++ b/app/src/main/res/layout/activity_boost_il_t.xml
@@ -31,6 +31,7 @@ tools:context=".BoostIl_T">
         <TextView
             android:id="@+id/display"
             android:text="Il vs t"
+            android:fontFamily="serif"
             android:textAlignment="center"
             android:textStyle="bold"
             android:padding="5dp"
