--- a/app/src/main/res/layout/activity_rc_all.xml
+++ b/app/src/main/res/layout/activity_rc_all.xml
@@ -7,12 +7,33 @@ android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".RcAll">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="15dp"
+        android:padding="13dp"
+        android:autoSizeTextType="uniform"
+        android:background="@color/black"
+        android:fontFamily="serif"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="35dp"
+        android:textStyle="bold"
+        android:text="RC circuit"/>
+
 <com.github.mikephil.charting.charts.LineChart
     android:id="@+id/lineChart"
     android:layout_margin="25dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 </com.github.mikephil.charting.charts.LineChart>
-
+    </LinearLayout>
 
 </RelativeLayout>
