--- a/app/src/main/res/layout/activity_rl_all.xml
+++ b/app/src/main/res/layout/activity_rl_all.xml
@@ -6,6 +6,26 @@ xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context=".RlAll">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="15dp"
+        android:padding="13dp"
+        android:autoSizeTextType="uniform"
+        android:background="@color/black"
+        android:fontFamily="serif"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textColor="@color/white"
+        android:textSize="35dp"
+        android:textStyle="bold"
+        android:text="RL circuit"/>
 
 <com.github.mikephil.charting.charts.LineChart
     android:id="@+id/lineChart"
@@ -13,6 +33,6 @@ tools:context=".RlAll">
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 </com.github.mikephil.charting.charts.LineChart>
-
+    </LinearLayout>
 
 </RelativeLayout>
