--- a/app/src/main/res/layout/activity_know_buck_boost.xml
+++ b/app/src/main/res/layout/activity_know_buck_boost.xml
@@ -1,9 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true"
     tools:context=".knowBuckBoost">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:padding="13dp"
+            android:autoSizeTextType="uniform"
+            android:background="@color/black"
+            android:fontFamily="serif"
+            android:textAlignment="center"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="35dp"
+            android:textStyle="bold"
+            android:text="Buck Boost Converter"/>
+
+
+        <ImageView
+            android:layout_width="fill_parent"
+            android:layout_height="300dp"
+            android:layout_gravity="center"
+            android:src="@drawable/buckboost" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
+            android:text="The buck-boost converter is a DC to DC converter. It can operate as a DC-DC Step-Down converter or a DC-DC Step-Up converter depending upon the duty cycle. Buck-boost converters also require more expensive components as they need to withstand both high Vin max voltage and high input current at Vin min, but they are useful in many applications. A very common use of buck-boost converters are for high power LED lighting."
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="21dp"/>
+    </LinearLayout>
+
+</ScrollView>
